test/Fail/NewTypeTwoConstructors.err
test/Fail/NewTypeTwoConstructors.agda:5.6-12: error: [CustomBackendError]
agda2hs:
  Newtype must have exactly one constructor in definition: Choice
